# nsampling

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  setup.py
examples/: Makefile  ns.cpp  ns.ipynb
python/: setup.py
python/sampling/: __init__.py
src/: CMakeLists.txt  Makefile  Sampling.i  Sampling_wrap.h  distributions.cpp  distributions.h  nested_sampling.cpp  nested_sampling.h  nsampling_pybind11.cpp
tests/: test_distributions.py  test_nested_sampling.py
