FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(-Wall -std=c++11 -g)
SET_SOURCE_FILES_PROPERTIES(Sampling.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(sampling python Sampling.i nested_sampling.cpp distributions.cpp)
SWIG_LINK_LIBRARIES(sampling ${PYTHON_LIBRARIES})
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/sampling.py ${CMAKE_CURRENT_BINARY_DIR}/_sampling.so DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../python/sampling/)

ADD_LIBRARY(SAMPLING SHARED nested_sampling.cpp distributions.cpp)
ADD_LIBRARY(SAMPLINGSTATIC STATIC nested_sampling.cpp distributions.cpp)
SET_TARGET_PROPERTIES(SAMPLING PROPERTIES OUTPUT_NAME sampling)
SET_TARGET_PROPERTIES(SAMPLINGSTATIC PROPERTIES OUTPUT_NAME sampling)
INSTALL(TARGETS SAMPLING DESTINATION lib)
INSTALL(TARGETS SAMPLINGSTATIC DESTINATION lib)
INSTALL(FILES nested_sampling.h distributions.h DESTINATION include)
